--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,17 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
 		<spring-boot-version>2.2.5.RELEASE</spring-boot-version>
 		<fasterxml-jackson-version>2.12.0</fasterxml-jackson-version>
-		<micrometer.version></micrometer.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
-                <relativePath></relativePath>
+		<version>2.2.5.RELEASE</version>
+        <relativePath></relativePath>
 	</parent>
 
 
@@ -32,11 +31,6 @@
 
 
 	<dependencies>
-		<dependency>
-		    <groupId>io.micrometer</groupId>
-		    <artifactId>micrometer-core</artifactId>
-		    <version>1.6.0</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -91,6 +85,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot-version}</version>
 			</plugin>
+			<!--
 			<plugin>
  				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.2</version>
@@ -132,8 +127,9 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
-				</executions>
+				</executions>AccountTest
 			</plugin>
+			-->
 		</plugins>
 	</build>
 
