--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# https://github.com/github/gitignore/blob/master/Java.gitignore
 # Compiled class file
 *.class
 
@@ -38,12 +37,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
-#eclipse file(s)
-.classpath
+# eclipse file(s)
 .project
-.*.prefs
-../
-../*
-target
-target/*
+.classpath
+
+#Idea files
+.iws
+.iml
